* Fixed error handling after state had been cleared (Herman V)
* Updates to SQL-Ledger 2.8 migration script (Chris T)
* Fixed income account tracking on assemblies screen (Erik H)
* Fixed trouble emailing recurring transactions (873, Erik H)
* Fixed saving company saving incorrectly to DB (886, John L)
* Can now search for batches/drafts without specifying a class (Erik H)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Herman V is Herman Vierendeels
John L is John Locke


Changelog for 1.3.33
* Fixed <?lsmb YYMMMDD ?> interpolation in settings (Chris T)
* Fixed Department dropdown ordering and selection (Chris T, 810)
* Fixed Project dropdown ordering and selection (Chris T, 809)
* Fixed UI inconsistency re: language dropdown (Chris T, 816)
* Fixed grants to menus (which can cause problems for submenus (Chris T, 820)
* Fixed tax boxes cannot be all unset (Chris T, 818)
* Project, serial number, and notes now appear initially (Chris T, 824)
* Fixed double-counting first date's balance on gl report (Chris T)
* Fixed user creation failing on some timezones with some datestyles (Chris T)
* Added secondary partnumber ordering to eca history report (Chris T)
* Fixed default_reportable not respected for invoices (Chris T, 799)
* Fixed dropdowns not affecting date range in tax reports (Chris T, 811)
* Added missing taxincluded handling, added script to populate (Chris T, 832)
* Fixed code references stringified on LaTeX templates (Chris T, 843)
* Orders no longer change customer when changing date (Chris T)
* Fixed toggling on-hold vendor invoices (Herman V)
* Fixed disappearing addresses on update on invoice screen (Chris T)

Herman V is Herman Vierendeels
Chris T is Chris Travers

Changelog for 1.3.32
* Fixed em-dash handling for pdfs (Chris T)
* Fixed multiple blank line handling for pdfs (Chris T)
* Fixed multiple repeat entries in chart of accounts drop down (Nick P, 812)
* Fixed transaction list empty if searched by creditor name (Nick P, 806)